# byodb-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  repomix-output-five-vee-byodb-rust.xml
.flox/: env.json
.flox/env/: manifest.toml
benches/: txn.rs
memory-bank/: .clinerules  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: bplus_node.rs  bplus_tree.rs  consts.rs  error.rs  file_util.rs  lib.rs  main.rs  mmap.rs  node.rs  tree.rs
src/api/: error.rs  mod.rs
src/core/: consts.rs  error.rs  header.rs  mmap.rs  mod.rs  tree.rs
src/core/mmap/: free_list.rs  meta_node.rs
src/core/tree/: node.rs
src/core/tree/node/: internal.rs  leaf.rs
src/mmap/: free_list.rs  meta_node.rs
src/tree/: buffer_store.rs  consts.rs  error.rs  node.rs  page_store.rs
src/tree/node/: header.rs  internal.rs  internal2.rs  leaf.rs  leaf2.rs
src/tree/page_store/: in_memory.rs  mmap_file.rs
