[package]
name = "byodb-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.7.1"
memmap2 = "0.9.5"
rand = "0.9.1"
seize = "0.5.0"
thiserror = "2.0.12"

[dev-dependencies]
anyhow = "1.0.98"
divan = "0.1.21"
rand_chacha = "0.9.0"
tempfile = "3.19.1"

[[bench]]
name = "txn"
harness = false
