[package]
name = "byodb-rust"
version = "0.2.1"
edition = "2024"
description = "Build Your Own Database in Rust!"
repository = "https://github.com/five-vee/byodb-rust"
license = "MIT"
keywords = ["database", "bplustree"]
categories = ["database-implementations"]
exclude = [
  ".flox/*",
  "justfile",
]

[dependencies]
arc-swap = "1.7.1"
memmap2 = "0.9.5"
seize = "0.5.0"
thiserror = "2.0.12"

[dev-dependencies]
anyhow = "1.0.98"
divan = "0.1.21"
rand = "0.9.1"
rand_chacha = "0.9.0"
tempfile = "3.20.0"

[[bench]]
name = "txn"
harness = false

[profile.profiling]
inherits = "release"
debug = true
